# xam_ros

./: ReadMe.md  ReadMe_cn.md  ihub.webm
parol6_pipeline/: CMakeLists.txt  package.xml
parol6_pipeline/include/parol6_pipeline/: aruco_pose_detector.hpp  pick_controller.hpp
parol6_pipeline/src/: aruco_pose_detector.cpp  pick_controller.cpp
xarm_gazebo/launch/: _robot_beside_table_gazebo.launch.py
xarm_gazebo/worlds/: table.world
xarm_moveit_config/launch/: lite6_moveit_gazebo.launch.py
xarm_moveit_config/rviz/: moveit.rviz
xarm_moveit_config/srdf/: _lite6_macro.srdf.xacro
